# lz4-block-array-messagepack

./: .gitignore  Cargo.toml  README.md
include/: lz4_messagepack.h
src/: lib.rs
src/lz4_messagepack/: Cargo.toml  README.md  default_input.json  response2  test_array_of_arrays.json  test_array_of_arrays_original.json  test_complex_maps.json  test_complex_maps_original.json  test_complex_product.json  test_complex_product_original.json  test_contact_info.json  test_contact_info_original.json  test_nested_structure.json  test_nested_structure_original.json  test_runner.py
src/lz4_messagepack/src/: main.rs  models.rs
src/lz4_messagepack/tests/: generate_test_data.rs  test_cases.rs  test_complex_json.rs  test_csharp_model.rs  test_examples.rs  test_multi_blocks.rs  test_route_models.rs
src/lz4_messagepack/tests/csharp_model/: route_example.json
src/lz4_messagepack/tests/data/: empty_data.json  format_test.json  invalid_type.json  large_buffer.json  large_data.json  small_buffer.json
src/lz4_messagepack/tests/examples/: binary_data.json  complex_real_world.json  complex_validation.json  extended_types.json  large_numbers.json  mixed_types.json  nested_objects.json  simple_array.json  special_chars.json
src/lz4_messagepack/tests/multi_blocks/: first_block_only.json  large_multi_blocks.json  mixed_types.json  multiple_blocks.json
tests/: generate_test_data.rs  test_cases.rs
