[package]
name = "lz4_messagepack"
version = "0.1.0"
edition = "2021"

[dependencies]
rmpv = { version = "1.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.24.0"         # LZ4 compression/decompression
rmp-serde = "1.1.1"
clap = { version = "3.2.22", features = ["derive"] } 